export default interface IShape {
  draw(): void;
}
