export default interface IShapeImplementer {
  drawImplementation(): void;
}
